Update Java Coding Guide to specify JavaFX 25 and enhance UI construction, threading, properties, and testing guidelines